--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -24,7 +24,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          mask-password: true
+          registry-type: public
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
