--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -24,6 +24,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
         with:
+          registry-type: public
           mask-password: true
 
       - name: Build, tag, and push image to Amazon ECR
@@ -55,6 +56,9 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry-type: public
+          mask-password: true
 
       - name: Run Docker Image to serve users
         run: |
