--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -25,7 +25,11 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
-          mask-password: true
+          mask-password: true  #
+
+      - name: Create ECR repository if not exists
+        run: |
+          aws ecr-public create-repository --repository-name ${{ secrets.ECR_REPO }} --region us-east-1 || true
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -58,7 +62,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
-          mask-password: true
+          mask-password: true  #
 
       - name: Run Docker Image to serve users
         run: |
