--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Continuous-Integration:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -25,11 +25,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
-          mask-password: true  #
-
-      - name: Create ECR repository if not exists
-        run: |
-          aws ecr-public create-repository --repository-name ${{ secrets.ECR_REPO }} --region us-east-1 || true
+          mask-password: true 
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -38,10 +34,9 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: latest
         run: |
-          set -e
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . || exit 1
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG || exit 1
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .  
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   Continuous-Deployment:
     needs: Continuous-Integration
@@ -62,7 +57,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
-          mask-password: true  #
+          mask-password: true
 
       - name: Run Docker Image to serve users
         run: |
