--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -27,16 +27,28 @@ jobs:
           registry-type: public
           mask-password: true 
 
+      - name: Create ECR repository if not exists
+        run: |
+          aws ecr-public create-repository \
+            --repository-name ${{ secrets.ECR_REPO }} \
+            --region us-east-1 \
+            --catalog-data description="Visa application repository" \
+            || true
+
       - name: Build, tag, and push image to Amazon ECR
-        id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .  
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+          set -e
+          # Print registry info for debugging
+          echo "Registry: $ECR_REGISTRY"
+          echo "Repository: $ECR_REPOSITORY"
+          
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . || exit 1
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG || exit 1
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
 
 
   Continuous-Deployment:
