--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -41,14 +41,21 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: latest
         run: |
-          set -e
-          # Print registry info for debugging
-          echo "Registry: $ECR_REGISTRY"
-          echo "Repository: $ECR_REPOSITORY"
+          # Print more debug info
+          echo "Current directory contents:"
+          ls -la
           
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . || exit 1
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG || exit 1
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+          # Build with more verbose output
+          docker build --progress=plain -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          
+          # Check docker images
+          docker images
+          
+          # Push with more verbose output
+          docker push -v $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
+          # Use the new way to set output
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
 
   Continuous-Deployment:
