--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: public.ecr.aws/${{ secrets.ECR_ALIAS }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: latest
         run: |
